--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
-*,
-*:after,
-*:before {
+html {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 body {
-  /*   max-width: 1200px; */
+  padding: 0;
+  margin: 0;
   background: #e5e5e5;
   font-family: "Inter", sans-serif;
 }
